[tool.poetry]
name = "tah-backend"
version = "0.0.0"
description = ""
authors = ["Dmitry Semenov <lonelyteapot@gmail.com>"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Topic :: Other/Nonlisted Topic",
    "Typing :: Typed",
    "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.1.0"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
select = ["E", "W", "F", "S", "C4", "PT", "SIM"]
line-length = 88

[tool.ruff.per-file-ignores]
"./tests/**" = ["S101"] # Allow asserts in tests

[tool.isort]
profile = "black"
lines_after_imports = 2
extra_standard_library = ["typing_extensions"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
